# ClockInterpreter

./: CMakeLists.txt  README.md  main.cpp
includes/: ConvolutionFilter.hpp  DummyFilter.hpp  Filter.hpp  utils.hpp
src/: ConvolutionFilter.cpp  DummyFilter.cpp  Filter.cpp
